k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doctor-service-svc
  namespace: default
  labels:
    app: doctor-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: doctor-service
