k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doctor-service-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "15m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - verification.practo-doctor.portal
    secretName: doctor-service-tls
  rules:
  - host: verification.practo-doctor.portal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: doctor-service-svc
            port:
              number: 8080
